--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			border: 0;
 			margin: 0;
 			padding: 0;
-			font-family: 'PT Sans', sans-serif;
+			font-family: 'Lobster', cursive;
 			color: white;
 			height: 100%;
 			width: 100%;
@@ -27,6 +27,16 @@
 			background-size: 100% 100%;
 		}
 		
+		.back h1 {
+			padding-top: 200px;
+			text-align: center;
+			font-size: 40px;
+		}
+		
+		.back h2 {
+			text-align: center;
+		}
+		
 		</style>
 		
 		<audio autoplay loop>
@@ -38,14 +48,14 @@
 	<body>
 
 		<div class = "back">
-			<h1>CONGRATULATIONS!!!!</h1>
-			<h2>After careful selection, we have selected you to be a part of our ECE 290 Lab</h2>
+			<h1>C O N G R A T U L A T I O N S ! ! ! !</h1>
+			<h2>After careful selection, you have been chosen to be a part of our ECE 290 Case Study Group</h2>
 		</div>
 		
 	</body>
 
 	<footer>
-		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 	</footer>
 
 </html>
