--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
 			background-image: url("fireworks.gif");
 			background-size: 100% 100%;
 		}
+
+		head{
+			height: auto;
+			width: auto;
+		}
+
+		footer{
+			height: auto;
+			width: auto;
+		}
+
+		h1, h2{
+			height: auto;
+			width: auto;
+		}
 		
 		</style>
 		
