--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			border: 0;
 			margin: 0;
 			padding: 0;
-			font-family: 'PT Sans', sans-serif;
+			font-family: 'Lobster', cursive;
 			color: white;
 			height: 100%;
 			width: 100%;
@@ -37,9 +37,27 @@
 			width: auto;
 		}
 
-		h1, h2{
+		h1{
 			height: auto;
 			width: auto;
+			text-align: center;
+			font-size: 60px;
+			padding-top: 200px;
+		}
+		
+		h2{
+			height: auto;
+			width: auto;
+			text-align: center;
+			font-size: 30px;
+			padding-top: 300px;
+		}
+		
+		img {
+			position: absolute;
+			height: 300px;
+			width: 300px;
+			right: -300px;
 		}
 		
 		</style>
@@ -53,14 +71,25 @@
 	<body>
 
 		<div class = "back">
-			<h1>CONGRATULATIONS!!!!</h1>
-			<h2>After careful selection, we have selected you to be a part of our ECE 290 Lab</h2>
+			<h1>C O N G R A T U L A T I O N S ! ! ! !</h1>
+			<img src="Whale.png">
+			<h2>After careful selection, you have been chosen to be a part of our ECE 290 case study group</h2>
 		</div>
 		
 	</body>
 
 	<footer>
-		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script>
+			$(document).ready(function(){
+				setTimeout(function(){
+					$('img').animate({
+						'right':'100%'
+					}, 4000);
+				}, 1000);
+			});
+		</script>
 	</footer>
 
 </html>
