390 up in dis bitch

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<div class = "back">
 			<h1>C O N G R A T U L A T I O N S ! ! ! !</h1>
 			<img src="Whale.png">
-			<h2>After careful selection, you have been chosen to be a part of our ECE 290 case study group</h2>
+			<h2>After careful selection, you have been chosen to be a part of our ECE 390 project group</h2>
 		</div>
 		
 	</body>
